--- a/vignettes/GXwasR_overview.Rmd
+++ b/vignettes/GXwasR_overview.Rmd
@@ -187,9 +187,8 @@ help(TestXGene, package = "GXwasR")
 ### Function 14
 
 ``` r
-help(MetaGXwas, package = "GXwasR")
-#> Error in `dev_help()`:
-#> ! Can't find development topic `MetaGXwas`.
+help(MetaGWAS, package = "GXwasR")
+#> ℹ Rendering development documentation for "MetaGWAS"
 ```
 
 ### Function 15
@@ -348,10 +347,8 @@ We hope that *[GXwasR](https://bioconductor.org/packages/3.21/GXwasR)* will be u
 citation("GXwasR")
 #> To cite package 'GXwasR' in publications use:
 #> 
-#>   Bose B, Blostein F, Kim J, Winters J, Actkins KV, Mayer D, Congivaram H, Niarchou M, Edwards DV, Davis
-#>   LK, Stranger BE (2025). "GXwasR: A Toolkit for Investigating Sex-Differentiated Genetic Effects on
-#>   Complex Traits." _medRxiv 2025.06.10.25329327_. doi:10.1101/2025.06.10.25329327
-#>   <https://doi.org/10.1101/2025.06.10.25329327>.
+#>   Bose B, Blostein F, Kim J, Winters J, Actkins KV, Mayer D, Congivaram H, Niarchou M, Edwards DV, Davis LK, Stranger BE (2025). "GXwasR: A Toolkit for Investigating Sex-Differentiated Genetic Effects on Complex Traits."
+#>   _medRxiv 2025.06.10.25329327_. doi:10.1101/2025.06.10.25329327 <https://doi.org/10.1101/2025.06.10.25329327>.
 #> 
 #> A BibTeX entry for LaTeX users is
 #> 
@@ -410,6 +407,7 @@ The *[GXwasR](https://bioconductor.org/packages/3.21/GXwasR)* package (Bose, Blo
 #>    BiocManager            1.30.26    2025-06-05 [2] CRAN (R 4.5.0)
 #>    BiocParallel           1.42.1     2025-06-01 [2] Bioconductor 3.21 (R 4.5.0)
 #>    BiocStyle              2.36.0     2025-04-15 [2] Bioconduc~
+#>    biocthis               1.18.0     2025-04-15 [2] Bioconduc~
 #>    Biostrings             2.76.0     2025-04-15 [2] Bioconduc~
 #>    bit                    4.6.0      2025-03-06 [2] CRAN (R 4.5.1)
 #>    bit64                  4.6.0-1    2025-01-16 [2] CRAN (R 4.5.1)
@@ -499,6 +497,7 @@ The *[GXwasR](https://bioconductor.org/packages/3.21/GXwasR)* package (Bose, Blo
 #>    ps                     1.9.1      2025-04-12 [2] CRAN (R 4.5.1)
 #>    purrr                  1.1.0      2025-07-10 [2] CRAN (R 4.5.1)
 #>    qqman                  0.1.9      2023-08-23 [2] CRAN (R 4.5.0)
+#>    R.cache                0.17.0     2025-05-02 [2] CRAN (R 4.5.0)
 #>    R.methodsS3            1.8.2      2022-06-13 [2] CRAN (R 4.5.0)
 #>    R.oo                   1.27.1     2025-05-02 [2] CRAN (R 4.5.0)
 #>    R.utils                2.13.0     2025-02-24 [2] CRAN (R 4.5.0)
@@ -535,6 +534,7 @@ The *[GXwasR](https://bioconductor.org/packages/3.21/GXwasR)* package (Bose, Blo
 #>    spelling               2.3.1      2024-10-04 [2] CRAN (R 4.5.0)
 #>    stringi                1.8.7      2025-03-27 [2] CRAN (R 4.5.0)
 #>    stringr                1.5.1      2023-11-14 [2] CRAN (R 4.5.0)
+#>    styler                 1.10.3     2024-04-07 [2] CRAN (R 4.5.0)
 #>    sumFREGAT              1.2.5      2022-06-07 [2] CRAN (R 4.5.1)
 #>    SummarizedExperiment   1.38.1     2025-04-30 [2] Bioconductor 3.21 (R 4.5.0)
 #>    sys                    3.4.3      2024-10-04 [2] CRAN (R 4.5.0)
@@ -560,7 +560,7 @@ The *[GXwasR](https://bioconductor.org/packages/3.21/GXwasR)* package (Bose, Blo
 #>    XVector                0.48.0     2025-04-15 [2] Bioconduc~
 #>    yaml                   2.3.10     2024-07-26 [2] CRAN (R 4.5.0)
 #> 
-#>  [1] /private/var/folders/d6/gtwl3_017sj4pp14fbfcbqjh0000gp/T/RtmpdyNNez/temp_libpath548171db3e3e
+#>  [1] /private/var/folders/d6/gtwl3_017sj4pp14fbfcbqjh0000gp/T/RtmpdyNNez/temp_libpath548179009ae3
 #>  [2] /Users/mayerdav/Library/R/arm64/4.5/library
 #>  [3] /opt/homebrew/lib/R/4.5/site-library
 #>  [4] /opt/homebrew/Cellar/r/4.5.1/lib/R/library
