--- a/vignettes/GXwasR_PRS.Rmd
+++ b/vignettes/GXwasR_PRS.Rmd
@@ -32,7 +32,15 @@ vignette: >
 ``` r
 ## Call some libraries (Users can ignore this.)
 library(printr)
+#> Registered S3 method overwritten by 'printr':
+#>   method                from     
+#>   knit_print.data.frame rmarkdown
 library(rmarkdown)
+#> 
+#> Attaching package: 'rmarkdown'
+#> The following object is masked from 'package:GXwasR':
+#> 
+#>     html_document
 ```
 
 ## Call GXwasR library and load example datasets:
@@ -85,7 +93,9 @@ pheno_type <- "binary"
 ldclump <- FALSE
 pheno_type <- "binary"
 PRSresult <- ComputePRS(DataDir, ResultDir, finput, summarystat, phenofile, covarfile, effectsize = "BETA", LDreference = "GXwasR_example", ldclump = FALSE, clump_p1, clump_p2, clump_r2, clump_kb, byCHR = TRUE, pthreshold = pthreshold, highLD_regions = highLD_regions, ld_prunning = TRUE, window_size = 50, step_size = 5, r2_threshold = 0.02, nPC = 6, pheno_type = "binary")
-#> Warning: cannot remove file '/private/var/folders/d6/gtwl3_017sj4pp14fbfcbqjh0000gp/T/RtmpdyNNez/temp_libpath548126ba7acf', reason 'Directory not empty'
+#> Using PLINK v1.9.0-b.7.7 64-bit (22 Oct 2024)
+#> Warning: cannot remove file '/private/var/folders/d6/gtwl3_017sj4pp14fbfcbqjh0000gp/T/RtmpfrKnQx/temp_libpath14b3710a34e96', reason 'Directory not empty'
+#> 
 #> ℹ 0.001
 #> • Computing PRS for threshold 0.001
 #> ℹ 0.05
@@ -100,9 +110,11 @@ PRSresult <- ComputePRS(DataDir, ResultDir, finput, summarystat, phenofile, cova
 #> • Computing PRS for threshold 0.4
 #> ℹ 0.5
 #> • Computing PRS for threshold 0.5
-PRSresult$PRS_plot
-#> Error in grid.Call.graphics(C_text, as.graphicsAnnot(x$label), x$x, x$y, : Metric information not available for this family/device
+#> This message is displayed once every 8 hours.
+print(PRSresult$PRS_plot)
 ```
+
+![plot of chunk compute_prs](./compute_prs-1.png)
 
 
 ``` r
@@ -242,7 +254,7 @@ finput <- "filtered_step1"
 foutput <- "NewtargetData"
 FilterSNP(DataDir, ResultDir, finput, foutput, SNPvec, extract = TRUE)
 #> ℹ 991 SNPs are extracted
-#> ✔ Plink files with extracted SNPs are in /var/folders/d6/gtwl3_017sj4pp14fbfcbqjh0000gp/T//RtmpdyNNez prefixed as NewtargetData
+#> ✔ Plink files with extracted SNPs are in /var/folders/d6/gtwl3_017sj4pp14fbfcbqjh0000gp/T//RtmpfrKnQx prefixed as NewtargetData
 #> NULL
 ```
 
@@ -287,7 +299,7 @@ pheno_type <- "binary"
 effectsize <- "BETA"
 ldclump <- FALSE
 PRSresult <- ComputePRS(DataDir, ResultDir, finput, summarystat, phenofile, covarfile, effectsize = "BETA", LDreference = "GXwasR_example", ldclump = FALSE, clump_p1, clump_p2, clump_r2, clump_kb, byCHR = TRUE, pthreshold = pthreshold, highLD_regions = highLD_regions, ld_prunning = TRUE, window_size = 50, step_size = 5, r2_threshold = 0.02, nPC = 6, pheno_type = "binary")
-#> Warning: cannot remove file '/private/var/folders/d6/gtwl3_017sj4pp14fbfcbqjh0000gp/T/RtmpdyNNez/temp_libpath548126ba7acf', reason 'Directory not empty'
+#> Warning: cannot remove file '/private/var/folders/d6/gtwl3_017sj4pp14fbfcbqjh0000gp/T/RtmpfrKnQx/temp_libpath14b3710a34e96', reason 'Directory not empty'
 #> ℹ 0.001
 #> • Computing PRS for threshold 0.001
 #> ℹ 0.05
@@ -302,9 +314,10 @@ PRSresult <- ComputePRS(DataDir, ResultDir, finput, summarystat, phenofile, cova
 #> • Computing PRS for threshold 0.4
 #> ℹ 0.5
 #> • Computing PRS for threshold 0.5
-PRSresult$PRS_plot
-#> Error in grid.Call.graphics(C_text, as.graphicsAnnot(x$label), x$x, x$y, : Metric information not available for this family/device
+print(PRSresult$PRS_plot)
 ```
+
+![plot of chunk compute_prs_2](./compute_prs_2-1.png)
 
 
 ``` r
@@ -396,12 +409,12 @@ finput <- "NewtargetData"
 foutput <- "maletarget"
 sex <- "males"
 x <- GetMFPlink(DataDir = DataDir, ResultDir = ResultDir, finput = finput, foutput = foutput, sex = sex, xplink = FALSE, autoplink = FALSE)
-#> ✔ Output plink files, prefixed as maletarget, are in /var/folders/d6/gtwl3_017sj4pp14fbfcbqjh0000gp/T//RtmpdyNNez
+#> ✔ Output plink files, prefixed as maletarget, are in /var/folders/d6/gtwl3_017sj4pp14fbfcbqjh0000gp/T//RtmpfrKnQx
 
 foutput <- "femaletarget"
 sex <- "females"
 x <- GetMFPlink(DataDir = DataDir, ResultDir = ResultDir, finput = finput, foutput = foutput, sex = sex, xplink = FALSE, autoplink = FALSE)
-#> ✔ Output plink files, prefixed as femaletarget, are in /var/folders/d6/gtwl3_017sj4pp14fbfcbqjh0000gp/T//RtmpdyNNez
+#> ✔ Output plink files, prefixed as femaletarget, are in /var/folders/d6/gtwl3_017sj4pp14fbfcbqjh0000gp/T//RtmpfrKnQx
 ```
 
 **(C) Perform LD clumping separately in both discovery data.**
@@ -454,7 +467,7 @@ pheno_type <- "binary"
 ldclump <- FALSE
 effectsize <- "BETA"
 PRSresultFemale <- ComputePRS(DataDir, ResultDir, finput, summarystat, phenofile, covarfile, effectsize = "BETA", LDreference = "GXwasR_example", ldclump = FALSE, clump_p1, clump_p2, clump_r2, clump_kb, byCHR = TRUE, pthreshold = pthreshold, highLD_regions = highLD_regions, ld_prunning = TRUE, window_size = 50, step_size = 5, r2_threshold = 0.02, nPC = 6, pheno_type = "binary")
-#> Warning: cannot remove file '/private/var/folders/d6/gtwl3_017sj4pp14fbfcbqjh0000gp/T/RtmpdyNNez/temp_libpath548126ba7acf', reason 'Directory not empty'
+#> Warning: cannot remove file '/private/var/folders/d6/gtwl3_017sj4pp14fbfcbqjh0000gp/T/RtmpfrKnQx/temp_libpath14b3710a34e96', reason 'Directory not empty'
 #> ℹ 0.001
 #> • Computing PRS for threshold 0.001
 #> ℹ 0.05
@@ -469,9 +482,10 @@ PRSresultFemale <- ComputePRS(DataDir, ResultDir, finput, summarystat, phenofile
 #> • Computing PRS for threshold 0.4
 #> ℹ 0.5
 #> • Computing PRS for threshold 0.5
-PRSresultFemale$PRS_plot
-#> Error in grid.Call.graphics(C_text, as.graphicsAnnot(x$label), x$x, x$y, : Metric information not available for this family/device
+print(PRSresultFemale$PRS_plot)
 ```
+
+![plot of chunk compute_prs_female](./compute_prs_female-1.png)
 
 
 ``` r
@@ -537,7 +551,7 @@ pheno_type <- "binary"
 ldclump <- FALSE
 effectsize <- "BETA"
 PRSresultmale <- ComputePRS(DataDir, ResultDir, finput, summarystat, phenofile, covarfile, effectsize = "BETA", LDreference = "GXwasR_example", ldclump = FALSE, clump_p1 = clump_p1, clump_p2 = clump_p2, clump_r2 = clump_r2, clump_kb = clump_kb, byCHR = TRUE, pthreshold = pthreshold, highLD_regions = highLD_regions, ld_prunning = TRUE, window_size = 50, step_size = 5, r2_threshold = 0.02, nPC = 6, pheno_type = "binary")
-#> Warning: cannot remove file '/private/var/folders/d6/gtwl3_017sj4pp14fbfcbqjh0000gp/T/RtmpdyNNez/temp_libpath548126ba7acf', reason 'Directory not empty'
+#> Warning: cannot remove file '/private/var/folders/d6/gtwl3_017sj4pp14fbfcbqjh0000gp/T/RtmpfrKnQx/temp_libpath14b3710a34e96', reason 'Directory not empty'
 #> ℹ 0.001
 #> • Computing PRS for threshold 0.001
 #> ℹ 0.05
@@ -552,9 +566,10 @@ PRSresultmale <- ComputePRS(DataDir, ResultDir, finput, summarystat, phenofile, 
 #> • Computing PRS for threshold 0.4
 #> ℹ 0.5
 #> • Computing PRS for threshold 0.5
-PRSresultmale$PRS_plot
-#> Error in grid.Call.graphics(C_text, as.graphicsAnnot(x$label), x$x, x$y, : Metric information not available for this family/device
+print(PRSresultmale$PRS_plot)
 ```
+
+![plot of chunk compute_prs_male](./compute_prs_male-1.png)
 
 
 ``` r
@@ -620,9 +635,8 @@ We hope that *[GXwasR](https://bioconductor.org/packages/3.21/GXwasR)* will be u
 citation("GXwasR")
 #> To cite package 'GXwasR' in publications use:
 #> 
-#>   Bose B, Blostein F, Kim J, Winters J, Actkins KV, Mayer D, Congivaram H, Niarchou M, Edwards DV, Davis
-#>   LK, Stranger BE (2025). "GXwasR: A Toolkit for Investigating Sex-Differentiated Genetic Effects on
-#>   Complex Traits." _medRxiv 2025.06.10.25329327_. doi:10.1101/2025.06.10.25329327
+#>   Bose B, Blostein F, Kim J, Winters J, Actkins KV, Mayer D, Congivaram H, Niarchou M, Edwards DV, Davis LK, Stranger BE (2025). "GXwasR: A Toolkit for
+#>   Investigating Sex-Differentiated Genetic Effects on Complex Traits." _medRxiv 2025.06.10.25329327_. doi:10.1101/2025.06.10.25329327
 #>   <https://doi.org/10.1101/2025.06.10.25329327>.
 #> 
 #> A BibTeX entry for LaTeX users is
@@ -777,7 +791,6 @@ This package was developed using *[biocthis](https://bioconductor.org/packages/3
 #>    R.oo                   1.27.1     2025-05-02 [2] CRAN (R 4.5.0)
 #>    R.utils                2.13.0     2025-02-24 [2] CRAN (R 4.5.0)
 #>    R6                     2.6.1      2025-02-15 [2] CRAN (R 4.5.0)
-#>    ragg                   1.4.0      2025-04-10 [3] CRAN (R 4.5.0)
 #>    rbibutils              2.3        2024-10-04 [2] CRAN (R 4.5.1)
 #>    rcmdcheck              1.4.0      2021-09-27 [3] CRAN (R 4.5.0)
 #>    RColorBrewer           1.1-3      2022-04-03 [2] CRAN (R 4.5.0)
@@ -812,9 +825,7 @@ This package was developed using *[biocthis](https://bioconductor.org/packages/3
 #>    sumFREGAT              1.2.5      2022-06-07 [2] CRAN (R 4.5.1)
 #>    SummarizedExperiment   1.38.1     2025-04-30 [2] Bioconductor 3.21 (R 4.5.0)
 #>    sys                    3.4.3      2024-10-04 [2] CRAN (R 4.5.0)
-#>    systemfonts            1.2.3      2025-04-30 [2] CRAN (R 4.5.0)
 #>    testthat             * 3.2.3      2025-01-13 [2] CRAN (R 4.5.1)
-#>    textshaping            1.0.1      2025-05-01 [3] CRAN (R 4.5.0)
 #>    tibble                 3.3.0      2025-06-08 [2] CRAN (R 4.5.0)
 #>    tidyr                  1.3.1      2024-01-24 [2] CRAN (R 4.5.1)
 #>    tidyselect             1.2.1      2024-03-11 [2] CRAN (R 4.5.0)
@@ -834,7 +845,7 @@ This package was developed using *[biocthis](https://bioconductor.org/packages/3
 #>    XVector                0.48.0     2025-04-15 [2] Bioconduc~
 #>    yaml                   2.3.10     2024-07-26 [2] CRAN (R 4.5.0)
 #> 
-#>  [1] /private/var/folders/d6/gtwl3_017sj4pp14fbfcbqjh0000gp/T/RtmpdyNNez/temp_libpath548171db3e3e
+#>  [1] /private/var/folders/d6/gtwl3_017sj4pp14fbfcbqjh0000gp/T/RtmpfrKnQx/temp_libpath14b3743d3521a
 #>  [2] /Users/mayerdav/Library/R/arm64/4.5/library
 #>  [3] /opt/homebrew/lib/R/4.5/site-library
 #>  [4] /opt/homebrew/Cellar/r/4.5.1/lib/R/library
